# JustVideoPlayer

./: CMakeLists.txt  CMakePresets.json  PCH.h  README.md  main.cpp
CommonLibs/Ini/include/: SimpleIni.h
CommonLibs/Ini/src/: SimpleIni.cpp
CommonLibs/Log/include/: Logger.h
CommonLibs/Log/src/: Logger.cpp
Framework/VideoPlayer/include/: JVideoPlayerBase.h  JVideoWidget.h  VButtonArea.h  VPlayList.h  VideoSlider.h
Framework/VideoPlayer/src/: JVideoPlayerBase.cpp  JVideoWidget.cpp  VButtonArea.cpp  VPlayList.cpp  VideoSlider.cpp
GUI/MainWindow/include/: VMainWindow.h  VPlayList.h
GUI/MainWindow/src/: VMainWindow.cpp  VPlayList.cpp
GUI/VideoWindow/include/: JVideoWindow.h
GUI/VideoWindow/src/: JVideoWindow.cpp
JGlobal/JFile/include/: JPlayListData.h
JGlobal/JFile/src/: JPlayListData.cpp
JGlobal/Volume/include/: JVolume.h
JGlobal/Volume/src/: JVolume.cpp
JGlobal/vlcPlayer/include/: vlcPlayer.h
JGlobal/vlcPlayer/src/: vlcPlayer.cpp
